# TriLogic

./: CMakeLists.txt  Info.plist  README.md  build.sh  vcpkg.json
resources/: TriLogic.icns
src/: ColourPropertyGrid.cpp  ColourPropertyGrid.hpp  GridDynamic.cpp  GridDynamic.hpp  OtrClasses.cpp  OtrClasses.hpp  RequestAPI.cpp  RequestAPI.hpp  SaveConfig.cpp  SaveConfig.hpp  TriLogic.cpp  TriLogic.hpp  main.cpp  main.hpp
